force-app/main/default/objects/Account/fields/Story3__c.field-meta.xml
<CustomField>
    <fullName>Story3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story3 for test</description>
    <inlineHelpText>Story3 for test</inlineHelpText>
    <label>Story3</label>
    <type>Checkbox</type>
</CustomField>