force-app/main/default/objects/Account/fields/StorySF__c.field-meta.xml
<CustomField>
    <fullName>StorySF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test Story SF</description>
    <inlineHelpText>Test Story SF</inlineHelpText>
    <label>StorySF</label>
    <type>Checkbox</type>
</CustomField>