force-app/main/default/objects/Account/fields/Test_Feild__c.field-meta.xml
<CustomField>
    <fullName>Test_Feild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a check field only</description>
    <inlineHelpText>This is a check field only</inlineHelpText>
    <label>Test Feild</label>
    <type>Checkbox</type>
</CustomField>